[gd_scene load_steps=97 format=3 uid="uid://b25otlfn0diwc"]

[ext_resource type="Script" uid="uid://khpci14ttxno" path="res://scripts/multkitty.gd" id="1_nwhc1"]
[ext_resource type="Texture2D" uid="uid://dlmsdk77o6wfb" path="res://Game assets/Regular sprite sheeet.png" id="2_i02k3"]
[ext_resource type="Texture2D" uid="uid://daw6helo7v5o8" path="res://Game assets/currentkittyanimation/walk_left_cycle.png" id="3_clmtl"]
[ext_resource type="Texture2D" uid="uid://bpibbn5hgbfwh" path="res://Game assets/kitty_transparent.png" id="3_cy602"]
[ext_resource type="Texture2D" uid="uid://dawv5kqcbfd5k" path="res://Game assets/currentkittyanimation/walk_right_cycle.png" id="4_4qjho"]
[ext_resource type="Texture2D" uid="uid://csq6wwg6vgtq0" path="res://Game assets/dough_ssh_1.png" id="6_clmtl"]
[ext_resource type="Texture2D" uid="uid://devl2hmli7vu3" path="res://Game assets/explosion-ezgif.com-gif-to-sprite-converter.png" id="7_4qjho"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q6pbq"]
atlas = ExtResource("2_i02k3")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_x15o3"]
atlas = ExtResource("2_i02k3")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwgw5"]
atlas = ExtResource("2_i02k3")
region = Rect2(800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_010mf"]
atlas = ExtResource("2_i02k3")
region = Rect2(0, 200, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqa1l"]
atlas = ExtResource("2_i02k3")
region = Rect2(1200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuvx8"]
atlas = ExtResource("2_i02k3")
region = Rect2(1000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_8h6b3"]
atlas = ExtResource("2_i02k3")
region = Rect2(800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3bhu"]
atlas = ExtResource("3_cy602")
region = Rect2(200, 400, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_gghpp"]
atlas = ExtResource("3_cy602")
region = Rect2(400, 400, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmfiq"]
atlas = ExtResource("3_cy602")
region = Rect2(600, 400, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_25h7p"]
atlas = ExtResource("3_cy602")
region = Rect2(800, 400, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_nny3h"]
atlas = ExtResource("3_cy602")
region = Rect2(1000, 400, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vn0r"]
atlas = ExtResource("3_cy602")
region = Rect2(0, 600, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ktcb"]
atlas = ExtResource("3_cy602")
region = Rect2(200, 600, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7qoi"]
atlas = ExtResource("2_i02k3")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_hex43"]
atlas = ExtResource("2_i02k3")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_2foft"]
atlas = ExtResource("2_i02k3")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdl6q"]
atlas = ExtResource("2_i02k3")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax0f0"]
atlas = ExtResource("2_i02k3")
region = Rect2(800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_twyma"]
atlas = ExtResource("2_i02k3")
region = Rect2(1000, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_bv1xv"]
atlas = ExtResource("2_i02k3")
region = Rect2(1200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkqm5"]
atlas = ExtResource("2_i02k3")
region = Rect2(0, 200, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lhha"]
atlas = ExtResource("4_4qjho")
region = Rect2(600, 600, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4xht"]
atlas = ExtResource("4_4qjho")
region = Rect2(800, 600, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mlen"]
atlas = ExtResource("4_4qjho")
region = Rect2(1000, 600, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhbuk"]
atlas = ExtResource("4_4qjho")
region = Rect2(1200, 600, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_sg2h5"]
atlas = ExtResource("4_4qjho")
region = Rect2(0, 800, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_0o4dp"]
atlas = ExtResource("4_4qjho")
region = Rect2(200, 800, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2005"]
atlas = ExtResource("4_4qjho")
region = Rect2(400, 800, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_c53pi"]
atlas = ExtResource("3_clmtl")
region = Rect2(600, 600, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_r06a0"]
atlas = ExtResource("3_clmtl")
region = Rect2(800, 600, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kfru"]
atlas = ExtResource("3_clmtl")
region = Rect2(1000, 600, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_rh7wv"]
atlas = ExtResource("3_clmtl")
region = Rect2(1200, 600, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_po8e4"]
atlas = ExtResource("3_clmtl")
region = Rect2(0, 800, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_11cfv"]
atlas = ExtResource("3_clmtl")
region = Rect2(200, 800, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjdfq"]
atlas = ExtResource("3_clmtl")
region = Rect2(400, 800, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_f237w"]
atlas = ExtResource("3_cy602")
region = Rect2(0, 800, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyq14"]
atlas = ExtResource("3_cy602")
region = Rect2(0, 1000, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_egrb0"]
atlas = ExtResource("3_cy602")
region = Rect2(200, 800, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwww8"]
atlas = ExtResource("3_cy602")
region = Rect2(400, 800, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_88ku5"]
atlas = ExtResource("3_cy602")
region = Rect2(600, 800, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_7an7s"]
atlas = ExtResource("3_cy602")
region = Rect2(800, 800, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_oy6i6"]
atlas = ExtResource("3_cy602")
region = Rect2(1000, 800, 200, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_r7qoi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6pbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x15o3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwgw5")
}],
"loop": false,
"name": &"Left_to_center",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_010mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqa1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuvx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h6b3")
}],
"loop": false,
"name": &"Right_to_center",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3bhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gghpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmfiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25h7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nny3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vn0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ktcb")
}],
"loop": true,
"name": &"blink",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7qoi")
}],
"loop": false,
"name": &"center",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hex43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2foft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdl6q")
}],
"loop": false,
"name": &"center_to_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax0f0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twyma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bv1xv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkqm5")
}],
"loop": false,
"name": &"center_to_right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lhha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4xht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mlen")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhbuk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sg2h5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0o4dp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2005")
}],
"loop": true,
"name": &"lefty_walk",
"speed": 22.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c53pi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r06a0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kfru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rh7wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_po8e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11cfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjdfq")
}],
"loop": true,
"name": &"righty_walk",
"speed": 22.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f237w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyq14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egrb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwww8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88ku5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7an7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oy6i6")
}],
"loop": true,
"name": &"walk",
"speed": 22.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_y3njp"]
atlas = ExtResource("6_clmtl")
region = Rect2(0, 200, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxfyg"]
atlas = ExtResource("6_clmtl")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vyei"]
atlas = ExtResource("6_clmtl")
region = Rect2(800, 400, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh0hh"]
atlas = ExtResource("6_clmtl")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_qn643"]
atlas = ExtResource("6_clmtl")
region = Rect2(800, 400, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjalj"]
atlas = ExtResource("6_clmtl")
region = Rect2(1000, 400, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7bl7"]
atlas = ExtResource("6_clmtl")
region = Rect2(0, 600, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgjnn"]
atlas = ExtResource("6_clmtl")
region = Rect2(200, 600, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qbxp"]
atlas = ExtResource("6_clmtl")
region = Rect2(400, 600, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjrfj"]
atlas = ExtResource("6_clmtl")
region = Rect2(600, 600, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_4v3j5"]
atlas = ExtResource("6_clmtl")
region = Rect2(200, 200, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_qerkc"]
atlas = ExtResource("6_clmtl")
region = Rect2(400, 200, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgk7b"]
atlas = ExtResource("6_clmtl")
region = Rect2(800, 200, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_we0oh"]
atlas = ExtResource("6_clmtl")
region = Rect2(600, 200, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ts0pq"]
atlas = ExtResource("6_clmtl")
region = Rect2(1000, 200, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_djowc"]
atlas = ExtResource("6_clmtl")
region = Rect2(0, 400, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwql5"]
atlas = ExtResource("6_clmtl")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_w31br"]
atlas = ExtResource("6_clmtl")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ja3gu"]
atlas = ExtResource("6_clmtl")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_bk3se"]
atlas = ExtResource("6_clmtl")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_dquvo"]
atlas = ExtResource("6_clmtl")
region = Rect2(800, 400, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdblh"]
atlas = ExtResource("6_clmtl")
region = Rect2(0, 800, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_wflq0"]
atlas = ExtResource("6_clmtl")
region = Rect2(200, 800, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdxvo"]
atlas = ExtResource("6_clmtl")
region = Rect2(400, 800, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6j48"]
atlas = ExtResource("6_clmtl")
region = Rect2(600, 800, 200, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_clmtl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3njp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxfyg")
}],
"loop": false,
"name": &"Left_to_center",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vyei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh0hh")
}],
"loop": false,
"name": &"Right_to_center",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qn643")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjalj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7bl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgjnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qbxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjrfj")
}],
"loop": true,
"name": &"blink",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4v3j5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qerkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgk7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_we0oh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ts0pq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djowc")
}],
"loop": true,
"name": &"blink_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwql5")
}],
"loop": false,
"name": &"center",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w31br")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ja3gu")
}],
"loop": false,
"name": &"center_to_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bk3se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dquvo")
}],
"loop": false,
"name": &"center_to_right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdblh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wflq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdxvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6j48")
}],
"loop": true,
"name": &"lefty_walk",
"speed": 22.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdblh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wflq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdxvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6j48")
}],
"loop": true,
"name": &"righty_walk",
"speed": 22.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdblh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wflq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdxvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6j48")
}],
"loop": true,
"name": &"walk",
"speed": 22.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_74vfq"]
atlas = ExtResource("7_4qjho")
region = Rect2(600, 200, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljov3"]
atlas = ExtResource("7_4qjho")
region = Rect2(800, 200, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcc6t"]
atlas = ExtResource("7_4qjho")
region = Rect2(0, 400, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwsu0"]
atlas = ExtResource("7_4qjho")
region = Rect2(200, 400, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_nw4wl"]
atlas = ExtResource("7_4qjho")
region = Rect2(400, 400, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_nulr8"]
atlas = ExtResource("7_4qjho")
region = Rect2(600, 400, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgvek"]
atlas = ExtResource("7_4qjho")
region = Rect2(800, 400, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojp6h"]
atlas = ExtResource("7_4qjho")
region = Rect2(0, 600, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5vgt"]
atlas = ExtResource("7_4qjho")
region = Rect2(200, 600, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_mi75v"]
atlas = ExtResource("7_4qjho")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_nijwm"]
atlas = ExtResource("7_4qjho")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7tud"]
atlas = ExtResource("7_4qjho")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_sp8fu"]
atlas = ExtResource("7_4qjho")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_gamli"]
atlas = ExtResource("7_4qjho")
region = Rect2(800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_156f1"]
atlas = ExtResource("7_4qjho")
region = Rect2(0, 200, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_qy7jc"]
atlas = ExtResource("7_4qjho")
region = Rect2(200, 200, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_6aemd"]
atlas = ExtResource("7_4qjho")
region = Rect2(400, 200, 200, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_c53pi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_74vfq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljov3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcc6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwsu0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nw4wl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nulr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgvek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojp6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5vgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi75v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nijwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7tud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sp8fu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gamli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_156f1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qy7jc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6aemd")
}],
"loop": false,
"name": &"explode",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_r7qoi"]
radius = 55.3263

[node name="Node2D" type="Node2D"]
script = ExtResource("1_nwhc1")

[node name="cat_animation" type="AnimatedSprite2D" parent="."]
position = Vector2(3, 2)
scale = Vector2(0.73625, 0.56125)
sprite_frames = SubResource("SpriteFrames_r7qoi")
animation = &"center"
autoplay = "center"

[node name="dough_animation" type="AnimatedSprite2D" parent="."]
position = Vector2(7, -22)
scale = Vector2(1.14812, 0.970625)
sprite_frames = SubResource("SpriteFrames_clmtl")
animation = &"lefty_walk"
autoplay = "center"

[node name="death_animation" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -62)
sprite_frames = SubResource("SpriteFrames_c53pi")
animation = &"explode"
frame = 5
frame_progress = 0.0232803

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_r7qoi")

[node name="idle_move_timer" type="Timer" parent="."]

[node name="idle_animation_timer" type="Timer" parent="."]

[node name="deathtimer" type="Timer" parent="."]

[connection signal="timeout" from="idle_move_timer" to="." method="_on_idle_move_timer_timeout"]
[connection signal="timeout" from="idle_animation_timer" to="." method="_on_idle_animation_timer_timeout"]
[connection signal="timeout" from="deathtimer" to="." method="_on_deathtimer_timeout"]
